# FastFlashAttention

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bench/: __init__.py  benchmark.py  common.py  mem.py  plot.py
fastflash_attention/: __init__.py  _kernel.py
tests/: test_determinism.py  test_eligibility.py  test_parity.py
